ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/clang-fuzzer/llvm/set-10/73883ddb1abcf3f96a22115961b3b6b8d3dd6b8a.log
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_7/73883ddb1abcf3f96a22115961b3b6b8d3dd6b8a.c:5:16: error: indirection requires pointer operand ('int' invalid)
  EMPTY = (1 <<* 9 ) ,
               ^ ~
PLEASE submit a bug report to https://bugs.llvm.org/ and include the crash backtrace, preprocessed source, and associated run script.
Stack dump:
0.	Program arguments: /usr/lib/llvm-12/bin/clang -cc1 -triple x86_64-pc-linux-gnu -emit-obj -mrelax-all --mrelax-relocations -disable-free -disable-llvm-verifier -discard-value-names -main-file-name 73883ddb1abcf3f96a22115961b3b6b8d3dd6b8a-6b4b63.c -mrelocation-model static -mframe-pointer=all -fmath-errno -fno-rounding-math -mconstructor-aliases -munwind-tables -target-cpu x86-64 -tune-cpu generic -fno-split-dwarf-inlining -debugger-tuning=gdb -resource-dir /usr/lib/llvm-12/lib/clang/12.0.1 -internal-isystem /usr/local/include -internal-isystem /usr/lib/llvm-12/lib/clang/12.0.1/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -O0 -pedantic -w -fdebug-compilation-dir /home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/diagnostic -ferror-limit 19 -fgnuc-version=4.2.1 -faddrsig -o /tmp/73883ddb1abcf3f96a22115961b3b6b8d3dd6b8a-6b4b63-0853cd.o -x c 73883ddb1abcf3f96a22115961b3b6b8d3dd6b8a-6b4b63.c
1.	/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_7/73883ddb1abcf3f96a22115961b3b6b8d3dd6b8a.c:6:14: current parser token ')'
#0 0x00007f9f8d1fd001 llvm::sys::PrintStackTrace(llvm::raw_ostream&, int) (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd1a001)
#1 0x00007f9f8d1fb140 llvm::sys::RunSignalHandlers() (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd18140)
#2 0x00007f9f8d1fd712 (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd1a712)
#3 0x00007f9f94e13980 __restore_rt (/lib/x86_64-linux-gnu/libpthread.so.0+0x12980)
#4 0x00007f9f92a7dd07 clang::ASTContext::getAsArrayType(clang::QualType) const (/usr/lib/x86_64-linux-gnu/libclang-cpp.so.12+0xa1dd07)
#5 0x0000000001f21360 
clang: error: unable to execute command: Segmentation fault (core dumped)
clang: error: clang frontend command failed due to signal (use -v to see invocation)
Ubuntu clang version 12.0.1-++20211102090516+fed41342a82f-1~exp1~20211102211019.11
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
clang: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang: note: diagnostic msg: /tmp/73883ddb1abcf3f96a22115961b3b6b8d3dd6b8a-6b4b63-27b111.c
clang: note: diagnostic msg: /tmp/73883ddb1abcf3f96a22115961b3b6b8d3dd6b8a-6b4b63-27b111.sh
clang: note: diagnostic msg: 

********************
